crates/eure-macros/tests/compile_fail/missing_from_eure_impl.stderr
error[E0277]: `NoFromEure` cannot be parsed from Eure document
 --> tests/compile_fail/missing_from_eure_impl.rs:7:12
  |
7 |     field: NoFromEure,
  |            ^^^^^^^^^^ this type does not implement `FromEure`
  |
help: the trait `FromEure<'_>` is not implemented for `NoFromEure`
 --> tests/compile_fail/missing_from_eure_impl.rs:3:1
  |
3 | struct NoFromEure;
  | ^^^^^^^^^^^^^^^^^
  = note: consider adding `#[derive(FromEure)]` to `NoFromEure`
  = help: the following other types implement trait `FromEure<'doc>`:
            `&'doc NodeArray` implements `FromEure<'doc>`
            `&'doc PrimitiveValue` implements `FromEure<'doc>`
            `&'doc str` implements `FromEure<'doc>`
            `EureDocument` implements `FromEure<'doc>`
            `Identifier` implements `FromEure<'_>`
            `MustBeText<M>` implements `FromEure<'_>`
            `MyStruct` implements `FromEure<'doc>`
            `NodeId` implements `FromEure<'doc>`
          and $N others
